# frand-home.0.4

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-builder.yml
frand-builder/: Dockerfile
frand-home/: .env  Cargo.toml  Dockerfile  Trunk.toml  index.html
frand-home/src/: main.rs
frand-home/src/app/: app.rs  mod.rs  personal.rs  root.rs  shared.rs
frand-home/src/app/node/: mod.rs  number_sum.rs  personal.rs  root.rs  shared.rs
frand-home/src/app/view/: inc_button.rs  mod.rs  number_inc.rs  number_sum_inc.rs
frand-home/src/backend/: actix_app.rs  client.rs  identity.rs  mod.rs  route.rs  serve.rs  server.rs  server_socket.rs  settings.rs  simple_component.rs
frand-home/src/common/: client_socket.rs  mod.rs  render.rs  simple.rs  simple_component.rs  yew_app.rs
frand-home/src/common/node/: client.rs  server.rs
frand-home/src/frontend/: mod.rs  render.rs  yew_app.rs
frand-node/: Cargo.toml
frand-node/macro/: Cargo.toml
frand-node/macro/src/: attrs.rs  component.rs  component_attrs.rs  lib.rs  node.rs  node_attrs.rs
frand-node/node/: Cargo.toml
frand-node/node/src/: __macro_prelude.rs  lib.rs  macro_prelude.rs  prelude.rs  result.rs
frand-node/node/src/bases/: async_container.rs  async_processor.rs  callback.rs  component.rs  container.rs  context.rs  emitter.rs  message.rs  mod.rs  node.rs  performer.rs  processor.rs  state.rs
frand-node/node/src/extends/: component.rs  mod.rs  node.rs  state.rs
frand-node/node/src/extends/activator/: container.rs  mod.rs  processor.rs
frand-node/node/src/extends/component/: component.rs  mod.rs  performer.rs
frand-node/node/src/extends/container/: container.rs  mod.rs  performer.rs  processor.rs
frand-node/node/src/extends/node/: message.rs  mod.rs  node.rs
frand-node/node/src/extends/performer/: mod.rs  processor.rs
frand-web/: Cargo.toml  Dockerfile
frand-web/src/: lib.rs
frand-web/src/actix/: mod.rs  server_socket.rs
frand-web/src/yew/: client_socket.rs
include/config/: log4rs.yml
serve/: .env  Dockerfile  docker-compose.yml
