[package]
name = "frand-home"
version = "0.4.1"
edition = "2021"
authors = [ "Frand <frand.nano@gmail.com>" ]
repository = "https://github.com/frand-nano/frand-home"

[dependencies]
frand-node = { path = "../frand-node/node" }
log = "0.4"
anyhow = "1.0"
serde = "1"
yew-websocket = "1"
uuid = { version = "1.8.0", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
frand-web = { path = "../frand-web", features = ["yew"] }
yew = { version = "0.21", features = ["csr"] }
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
frand-web = { path = "../frand-web", features = ["yew", "actix"] }
tokio = { version = "1.4", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3"
rustls = "0.22"
rustls-pemfile = "2"
yew = { version = "0.21", features = ["csr", "ssr"] }
actix = "0.13.0"
actix-ws = "0.3.0"
actix-http = "3.6.0"
actix-web = { version = "4", features = ["rustls-0_22"] }
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-proxy = "0.2.0"
actix-files = "0.6.5"
dotenv = "0.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.log4rs]
version = "1.3"
features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"]
