[package]
name = "frand-node"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
frand-node-macro = { path = "../macro" }
log = "0.4"
anyhow = "1.0"
serde = "1"
ciborium = "0.2"
crossbeam = "0.8.4"
futures = "0.3"
tokio = { version = "1.4", features = ["sync", "macros"] }